<resources>
    <string name="app_name">"Next Step"</string>
    <string name="CFBundleDisplayName">"Next Step"</string>
    <string name="menu_item_home">"Home"</string>
    <string name="menu_item_info">"Info"</string>
    <string name="menu_item_tracking">"Tracing"</string>
    <string name="loading_view_reload">"Reload"</string>
    <string name="loading_view_error_title">"Error"</string>
    <string name="grant_permission_button">"Grant permission"</string>
    <string name="granted_permission_button">"Permission granted"</string>
    <string name="language_key">"en"</string>
    <string name="force_update_title">"Update"</string>
    <string name="homescreen_handshakes_module_count_info_label">"Encounters are anonymously stored on your device"</string>
    <string name="homescreen_handshakes_module_count_label_format">"{count} last 48 hours"</string>
    <string name="homescreen_handshakes_module_info_label">"Here you'll see when users you've encountered inform about COVID-19."</string>
    <string name="inform_title">"Stop the chain of infection"</string>
    <string name="inform_subtext">"I want to help break the COVID-19 chain of infection"</string>
    <string name="inform_button_symptom_title">"Symptoms"</string>
    <string name="inform_button_symptom_text">"I have Symptoms"</string>
    <string name="inform_button_positive_title">"Positive test result"</string>
    <string name="inform_button_positive_text">"I was recently tested positive"</string>
    <string name="what_to_do_button">"What to do"</string>
    <string name="homescreen_handshakes_module_gemeldet_label">"An encounter you have recently met has informed about COVID-19"</string>
    <string name="inform_continue_button">"Next"</string>
    <string name="inform_positive_long_text">"I have recently tested positive for COVID-19. 

I want to stop a potential infection chain by allowing the app to anonymously contact people who were recently close by."</string>
    <string name="inform_symptom_starttext">"I suffer from one or more of the following symptoms:"</string>
    <string name="inform_send_button_title">"Send"</string>
    <string name="inform_symptoms_send_text">"I suffer from the previously listed symptoms which can be attributed to COVID-19.

I want to stop a potential infection chain by allowing the app to anonymously contact people who were recently close by."</string>
    <string name="inform_send_thankyou">"THANK YOU!"</string>
    <string name="inform_send_thankyou_text">"Your information was transmitted. You're making an important contribution to keeping the spread of COVID-19 at bay."</string>
    <string name="inform_symptom_coughdry">"Cough (mostly dry)"</string>
    <string name="inform_symptom_hals">"Sore throat"</string>
    <string name="inform_symptom_kurzatmigkeit">"Shortness of breath"</string>
    <string name="inform_symptom_fieber">"Fever"</string>
    <string name="inform_symptom_muskel">"Muscle pain"</string>
    <string name="inform_no_symptom">"None of the listed symptoms"</string>
    <string name="downloading_pdf">"Downloading PDF"</string>
    <string name="inform_empfehlung">"Recommendation"</string>
    <string name="inform_empfehlung_subtext">"A medical check up or lab test is currently not advised. 

Please continue to practice protective hygiene measures and follow the advised behavior rules."</string>
    <string name="inform_fertig_button_title">"Finish"</string>
    <string name="downloading_csv">"Downloading CSV"</string>
    <string name="handshakes_heading_homescreen">" "</string>
    <string name="handshakes_title_homescreen">"Encounters"</string>
    <string name="inform_heading_homescreen">" "</string>
    <string name="inform_title_homescreen">"Suspicion of COVID-19"</string>
    <string name="inform_text_homescreen">"Inform users you've recently encountered if you experience symptoms or if you've tested positive for COVID-19"</string>
    <string name="inform_button_title">"Inform now"</string>
    <string name="inform_button_title_again">"Inform again"</string>
    <string name="inform_last_meldung_text">"last successful signal"</string>
    <string name="tab_theapp_title">"The App"</string>
    <string name="tab_aktuell_title">"Current"</string>
    <string name="tab_verhalten_title">"Behavior"</string>
    <string name="tab_prinzip_title">"Principle"</string>
    <string name="cancel">"Cancel"</string>
    <string name="close">"Close"</string>
    <string name="app_name_star">"STAR"</string>
    <string name="homescreen_handshakes_module_info_label_star">"There are currently no signals of other users thate were recently close by."</string>
    <string name="homescreen_handshakes_module_gemeldet_label_star">"A user who was recently close by has sent out a signal."</string>
    <string name="inform_title_homescreen_star">"Broadcast"</string>
    <string name="inform_text_homescreen_star">"Send a signal to all users who you've recently encountered"</string>
    <string name="inform_heading_homescreen_star">" "</string>
    <string name="inform_broadcast_title_star">"Broadcast"</string>
    <string name="inform_broadcast_long_text_star">"Send a signal to all users who were recently near you. Positional or private data is not published or shared with anyone in this process."</string>
    <string name="inform_send_thankyou_text_star">"You've signaled all users who've recently been near you. Positional or private data was not published or shared with anyone in this process."</string>
    <string name="begegnungen_counter_title">"Synchronisation"</string>
    <string name="inform_meldung_time">"Report  from {date}"</string>
    <string name="homescreen_inform_module_gemeldet_label_star">"You have sent a signal to all users you have met recently"</string>
    <string name="homescreen_inform_module_gemeldet_label">"You have informed all users you have met recently"</string>
    <string name="push_exposed_title">"New information available"</string>
    <string name="push_exposed_text">"Please open the app for more information."</string>
    <string name="onboarding_top_label_how">"How does it work:"</string>
    <string name="onboarding_title_1">"One step ahead"</string>
    <string name="onboarding_desc_1">"With the Next Step application we can all cooperate to keep the spread of COVID-19 at bay. The Next Step application allows people who have become infected to start isolating before they experience first symptoms."</string>
    <string name="onboarding_title_2">"Automatic and
anonymous"</string>
    <string name="onboarding_desc_2">"This app recognizes encounters with other users and saves these encounters anonymously on your device using encryption."</string>
    <string name="onboarding_title_3">"Inform"</string>
    <string name="onboarding_desc_3">"If you test positive you can anonymously inform everyone you've encountered so that they can make the necessary precautionary measures."</string>
    <string name="onboarding_title_4">"Authorization"</string>
    <string name="onboarding_desc_4">"This app needs the following permissions in order to work properly."</string>
    <string name="onboarding_title_5">"Next Step"</string>
    <string name="onboarding_desc_5">"Together we can move towards lifting isolation."</string>
    <string name="onboarding_android_location_permission_info">"User tracing is performed using Bluetooth Low Energy technology. The app requires you to keep Bluetooth enabled in order to perform the tracing. On Android, applications need to additionally have Location Services enabled by design in order to access Bluetooth. But we will not at any point access your location."</string>
    <string name="onboarding_android_battery_saving_info">"Turn off battery optimization for our app so that we can perform continuous tracing in the background."</string>
    <string name="button_permission_location_android">"Allow tracing"</string>
    <string name="button_permission_location_granted_android">"Tracing allowed"</string>
    <string name="button_ok">"ok"</string>
    <string name="activate_bluetooth_button">"Activate Bluetooth"</string>
    <string name="activate_push_button">"Activate Push"</string>
    <string name="bluetooth_activated_label">"Bluetooth activated"</string>
    <string name="push_activated_label">"Push activated"</string>
    <string name="onboarding_continue_button">"Next"</string>
    <string name="onboarding_continue_without_button">"Continue without authorization"</string>
    <string name="onboarding_continue_without_popup_text">"Do you really want to continue? The App can only work with the required permissions."</string>
    <string name="onboarding_continue_without_popup_abort">"Cancel"</string>
    <string name="onboarding_continue_without_popup_continue">"Continue"</string>
    <string name="onboarding_finish_button">"Finish"</string>
    <string name="button_battery_optimization">"Deactivate battery optimization"</string>
    <string name="button_battery_optimization_deactivated">"Activate battery optimization"</string>
    <string name="homescreen_handshakes_module_info_label_nosymptoms">"Here you will be informed, if one of your encounters has been positively tested on COVID-19."</string>
    <string name="inform_text_homescreen_nosymptoms">"Inform your encounters, if you have been positively tested on COVID-19."</string>
    <string name="unexpected_error_title">"an unknown Error has occurred."</string>
    <string name="bluetooth_turned_off">"The App does not work, please activate Bluetooth."</string>
    <string name="bluetooth_permission_turned_off">"The app does not work hence the Bluetooth authorization is turned off."</string>
    <string name="NSBluetoothPeripheralUsageDescription">"Encounters are recognized via Bluetooth, in the Background and energy-saving"</string>
    <string name="NSBluetoothAlwaysUsageDescription">"Encounters are recognized via Bluetooth, in the Background and energy-saving"</string>
    <string name="foreground_service_notification_text">"App is scanning in the Background"</string>
    <string name="exposed_info_support_text">"If you have any questions or need recommendations, call the hotline."</string>
    <string name="exposed_info_tel_button_title">"+41 00 000 00 00"</string>
    <string name="inform_code_title">"Enter the code"</string>
    <string name="inform_code_text">"Enter the code you received with your test result."</string>
    <string name="inform_code_no_code">"Didn't get a code?"</string>
    <string name="logs_filter_tags">"tag filter (comma separated)"</string>
    <string name="bluetooth_setting_title">"Tracing"</string>
    <string name="bluetooth_setting_text">"Enable Bluetooth"</string>
    <string name="bluetooth_setting_tracking_active">"Tracing enabled"</string>
    <string name="bluetooth_setting_tracking_active_subtext">"Encounters are saved anonymously on your device."</string>
    <string name="debug_settings_title">"Debug Settings"</string>
    <string name="debug_force_sync_title">"Force sync"</string>
    <string name="debug_force_sync_subtitle">"set sync period at 10s"</string>
    <string name="debug_state_setting_title">"Override app state"</string>
    <string name="debug_state_setting_text">"This setting overrides the visual state of the app. The actual tracing functionality is not affected by it."</string>
    <string name="debug_state_setting_option_none">"no override"</string>
    <string name="debug_state_setting_option_ok">"healthy"</string>
    <string name="debug_state_setting_option_exposed">"exposed to a positively tested contact"</string>
    <string name="debug_state_setting_option_infected">"reported self as positively tested"</string>
    <string name="debug_sdk_state_title">"Sdk state"</string>
    <string name="debug_sdk_state_text">"The current state of the dp-3t sdk."</string>
    <string name="debug_sdk_button_reset">"reset sdk"</string>
</resources>