<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Ubique Innovation AG
  ~ https://www.ubique.ch
  ~ Copyright (c) 2020. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/grey_light"
	android:gravity="center_horizontal"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/contacts_toolbar"
		style="@style/NextStep.Toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:navigationIcon="@drawable/ic_arrow_back"
		app:title="@string/debug_settings_title" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/spacing_medium_large"
			android:orientation="vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_huge"
				android:layout_marginTop="@dimen/spacing_huge"
				android:layout_marginEnd="@dimen/spacing_huge"
				android:layout_marginBottom="@dimen/spacing_medium_large"
				android:adjustViewBounds="true"
				android:maxHeight="@dimen/illustration_height"
				android:paddingStart="@dimen/spacing_huge"
				android:paddingEnd="@dimen/spacing_huge"
				android:src="@drawable/ill_privacy" />

			<androidx.cardview.widget.CardView
				style="@style/NextStep.Card"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="@dimen/spacing_medium_large">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/spacing_large"
						android:layout_marginTop="@dimen/spacing_medium_large"
						android:layout_marginRight="@dimen/spacing_large"
						android:layout_marginBottom="@dimen/spacing_medium">

						<Switch
							android:id="@+id/debug_force_sync_switch"
							style="@style/NextStep.Switch"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true"
							android:layout_alignParentEnd="true"
							android:layout_marginTop="3dp" />

						<TextView
							android:id="@+id/debug_force_sync_title"
							style="@style/NextStep.Text.Title"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignParentStart="true"
							android:layout_alignParentTop="true"
							android:layout_toStartOf="@+id/debug_force_sync_switch"
							android:text="@string/debug_force_sync_title" />

						<TextView
							style="@style/NextStep.Text"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_below="@id/debug_force_sync_title"
							android:layout_alignParentStart="true"
							android:text="@string/debug_force_sync_subtitle" />

					</RelativeLayout>

					<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_marginStart="@dimen/spacing_medium_large"
						android:layout_marginEnd="@dimen/spacing_medium_large"
						android:background="@color/divider" />

				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				style="@style/NextStep.Card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_medium_large"
				android:layout_marginStart="@dimen/spacing_medium_large"
				android:layout_marginEnd="@dimen/spacing_medium_large">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/spacing_large"
					android:layout_marginTop="@dimen/spacing_medium_large"
					android:layout_marginRight="@dimen/spacing_large"
					android:layout_marginBottom="@dimen/spacing_large"
					android:orientation="vertical">

					<TextView
						style="@style/NextStep.Text.Title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/debug_sdk_state_title" />

					<TextView
						style="@style/NextStep.Text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/debug_sdk_state_text" />

					<TextView
						android:id="@+id/debug_sdk_state_text"
						style="@style/NextStep.Text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/spacing_medium"
						android:padding="@dimen/spacing_small"
						android:background="@drawable/bg_status_bubble"
						android:backgroundTint="@color/status_green_bg"
						android:gravity="center_horizontal"/>

					<Button
						android:id="@+id/debug_button_reset"
						android:layout_width="match_parent"
						style="@style/NextStep.Button"
						android:backgroundTint="@color/blue_main"
						android:layout_marginTop="@dimen/spacing_large"
						android:layout_height="wrap_content"
						android:text="@string/debug_sdk_button_reset"/>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				style="@style/NextStep.Card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/spacing_medium_large">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/spacing_large"
					android:layout_marginTop="@dimen/spacing_medium_large"
					android:layout_marginRight="@dimen/spacing_large"
					android:layout_marginBottom="@dimen/spacing_medium"
					android:orientation="vertical">

					<TextView
						style="@style/NextStep.Text.Title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/debug_state_setting_title" />

					<TextView
						style="@style/NextStep.Text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/debug_state_setting_text" />

					<RadioGroup
						android:id="@+id/debug_state_options_group"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/spacing_medium">

						<RadioButton
							android:id="@+id/debug_state_option_none"
							style="@style/NextStep.RadioButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/debug_state_setting_option_none" />

						<RadioButton
							android:id="@+id/debug_state_option_healthy"
							style="@style/NextStep.RadioButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/debug_state_setting_option_ok" />

						<RadioButton
							android:id="@+id/debug_state_option_exposed"
							style="@style/NextStep.RadioButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/debug_state_setting_option_exposed" />

						<RadioButton
							android:id="@+id/debug_state_option_infected"
							style="@style/NextStep.RadioButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/debug_state_setting_option_infected" />

					</RadioGroup>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

		</LinearLayout>

	</ScrollView>

</LinearLayout>